--- a/florida_tech_cms_poster_template.tex
+++ b/florida_tech_cms_poster_template.tex
@@ -11,13 +11,13 @@
 %                                                                       %
 % License:                                                              %
 % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)   %
-%																		%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%																	%
-%%%%%%%%%%%%%%%%%% Florida Tech & CMS Poster Template %%%%%%%%%%%%%%%%%%%                                                      				%
-% Modified by Stephen D. Butalla for Florida Tech/CMS poster			%
-% presentations.														%
-% 2021/10/3  															%
-% stephen.butalla@cern.ch												%
+%									%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%% Florida Tech & CMS Poster Template %%%%%%%%%%%%%%%%%%%                                                      				
+% Modified by Stephen D. Butalla for Florida Tech/CMS poster		%
+% presentations.							%
+% 2021/10/3  								%
+% stephen.butalla@cern.ch						%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -72,8 +72,9 @@
 	%textfont={\setlength{\parindent}{1.5em}}, % Uncomment for paragraph indentation
 	linewidth=2pt % Width of the border lines around content boxes
 }
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	                                      TITLE 	   				  %
+%	                TITLE, AUTHOR LIST, AFFILIATIONS, AND CONFERENCE 	   	  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 {\includegraphics[height=3.9cm]{FloridaTechNewLogo.png}} % First university/lab logo on the left
@@ -86,7 +87,7 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	                                     INTRODUCTION 				  %
+%	                                 INTRODUCTION 		         		  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \headerbox{Introduction}{name=objectives, column=0, row=0, span=2}{
